# flatpak-vscode

./: .editorconfig  .eslintrc.js  .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  eslint.config.mjs  manifest-schema.json  myschema.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: CI.yml
src/: buildPipeline.ts  command.ts  commands.ts  extension.ts  flatpak.types.ts  flatpakManifest.ts  flatpakManifestFinder.ts  flatpakManifestManager.ts  flatpakManifestMap.ts  flatpakManifestUtils.ts  flatpakRunner.ts  flatpakRunnerStatusItem.ts  flatpakTerminal.ts  flatpakUtils.ts  flatpakVersion.ts  lazy.ts  manifest.ts  manifestManager.ts  manifestMap.ts  manifestUtils.ts  migration.ts  nodePty.ts  outputTerminal.ts  runner.ts  runnerStatusItem.ts  statusBarItem.ts  store.ts  taskMode.ts  tasks.ts  terminal.ts  terminalProvider.ts  utils.ts  workspaceState.ts
src/integration/: base.ts  index.ts  mesonBuild.ts  rustAnalyzer.ts  vala.ts  vls.ts
src/test/: runTest.ts
src/test/assets/: .has.invalid.AppId.json  has.missing.AppId.json  has.missing.Modules.json  org.gnome.Screenshot.json  org.valid.Manifest.json  org.valid.Manifest.jsonc  org.valid.Manifest.yml
src/test/assets/meson/: meson.build  some.meson.Project.json
src/test/assets/meson/data/: meson.build  some.meson.Project.appdata.xml.in  some.meson.Project.desktop.in  some.meson.Project.gschema.xml
src/test/assets/meson/src/: main.py  meson.build  meson.in
src/test/suite/: extension.test.ts  index.ts  outputTerminal.test.ts
(+1 files in other folders)
